// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`h2x should support config.h2xConfig 1`] = `
"<svg>
  <g stroke=\\"#063855\\" strokeWidth={2}>
    <path d=\\"M51,37 L37,51\\" />
  </g>
</svg>
"
`;

exports[`h2x should take svg and convert it to jsx 1`] = `
"<svg>
  <g stroke=\\"#063855\\" strokeWidth={2}>
    <path d=\\"M51,37 L37,51\\" id=\\"Shape\\" />
  </g>
</svg>
"
`;
